# FramelessWindow

./: LICENSE  README.md  pyproject.toml  requirements.txt
example/: example.py
src/FramelessWindow/: __init__.py  frameless_window.py  system_theme.py  task_bar.py  title_bar.py  utils.py  window_effects.py
src/FramelessWindow/resources/: resources.qrc  resources_rc.py
